--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "API de Restaurantes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc -w & nodemon dist/main.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Harisson Oliveira",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -20,5 +21,13 @@
     "@types/mongoose": "4.7.32",
     "@types/restify": "5.0.6",
     "@types/restify-errors": "4.3.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HarissonOliveira/meat-api-NODEJS.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HarissonOliveira/meat-api-NODEJS/issues"
+  },
+  "homepage": "https://github.com/HarissonOliveira/meat-api-NODEJS#readme"
 }
